--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=es6%2Ces7%2Ces2016%2Ces2017%2Ces5%2Cdefault%2CArray.prototype.filter%2CArray.prototype.forEach%2CArray.prototype.includes%2CArray.prototype.indexOf%2CArray.prototype.map%2CEvent%2CEvent.focusin%2CFunction.prototype.bind%2CFunction.prototype.name%2CEventSource%2CHTMLDocument%2CJSON%2Cconsole%2Cconsole.log%2Cdocument%2Cdocument.querySelector%2Cdocument.head%2Cdocument.getElementsByClassName%2C%7Ehtml5-elements%2C%7Eviewport%2Cfetch"></script>
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&amp;subset=cyrillic,latin-ext" rel="stylesheet"> 
     <meta
